tests/neg/parser-stability-17.scala
trait x0[] {      x0: x0 => }      // error // error
        class x0[x1] extends x0[x0 x0] x2 x0  // error // error // error
